# rsubdomain

./: .gitignore  Cargo.toml  LICENSE  PUBLISH_COMMANDS.md  README.md  README_EN.md  RELEASE_NOTES_v1.2.3.md  device.wpacp  dic.txt  dic2.txt  names.txt  ping.txt  yn.txt
data/: cdn_ip_ranges.txt  cdn_rules.txt  default_subdomains.txt
examples/: Cargo.toml  bandwidth_test.rs  datalink.rs  dictionary_array_test.rs  icmp.rs  library_usage.rs  quick_start.rs  send_packet.rs  test_device.rs
src/: api.rs  device.rs  dns_resolver.rs  gen.rs  handle.rs  input.rs  lib.rs  local_struct.rs  main.rs  model.rs  output.rs  query_type.rs  recv.rs  resolver_defaults.rs  resolver_health.rs  send.rs  speed_test.rs  stack.rs  state.rs  struct.rs  structs.rs  subdata.rs  util.rs  verify.rs  wildcard.rs
src/api/: config.rs  convenience.rs  dictionary.rs  mod.rs  progress.rs  result.rs
src/api/engine/: build.rs  mod.rs  network.rs  processing.rs  run.rs  runtime.rs
src/asset/: cdn.rs  ip_range.rs  metadata.rs  mod.rs
src/device/: linux.rs  macos.rs  mod.rs
src/device/common/: arp.rs  listing.rs  mod.rs  probing.rs  selection.rs
src/dns_resolver/: config.rs  display.rs  lookup.rs  mod.rs  types.rs
src/handle/: display.rs  dns.rs  mod.rs  summary.rs  types.rs
src/logger/: mod.rs  rlogger.rs
src/output/: export.rs  formats.rs  mod.rs  model.rs
src/send/: error.rs  mod.rs  query.rs  sender.rs
src/speed_test/: limiter.rs  mod.rs  tester.rs
src/verify/: display.rs  http.rs  mod.rs  types.rs
tests/: api_integration_test.rs
