[package]
name = "rsubdomain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.35.0"
log = "0.4"
colored = "2.0"  
byteorder = "1.4"  
rand= "0.8.5"
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
lazy_static = "1.4"
chrono = "0.4"
itertools = "0.13.0"
crossbeam-channel = "0.5"
reqwest = { version = "0.11", features = ["json"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

[dev-dependencies]
similar = "2.0"
strsim = "0.10"