[package]
name = "rsubdomain"
version = "1.2.0"
edition = "2021"
authors = ["o0x1024 <o0x1024@gmail.com>"]
description = "A high-performance subdomain brute-force tool written in Rust"
homepage = "https://github.com/o0x1024/rsubdomain"
repository = "https://github.com/o0x1024/rsubdomain"
license = "MIT"
readme = "README.md"
keywords = ["subdomain", "dns", "security", "network", "brute-force"]
categories = ["command-line-utilities", "network-programming"]

# 库配置
[lib]
name = "rsubdomain"
path = "src/lib.rs"

# 二进制配置
[[bin]]
name = "rsubdomain"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.35.0"
log = "0.4"
colored = "2.0"  
byteorder = "1.4"  
rand= "0.8.5"
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.13.0"
crossbeam-channel = "0.5"
reqwest = { version = "0.11", features = ["json"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

[dev-dependencies]
similar = "2.0"
strsim = "0.10"
tokio-test = "0.4"

# 功能特性
[features]
default = ["full"]
full = ["verify", "dns-resolver", "speed-test", "output"]
verify = []
dns-resolver = []
speed-test = []
output = []

# 文档配置
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]