[package]
name = "rsubdomain-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# 本地依赖rsubdomain库
rsubdomain = { path = "../" }

# 或者从git仓库依赖
# rsubdomain = { git = "https://github.com/o0x1024/rsubdomain" }

# 或者从crates.io依赖（如果已发布）
# rsubdomain = "1.0.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 网络包处理
pnet = "0.35.0"
rand = "0.8"

[[bin]]
name = "library_usage"
path = "library_usage.rs"

[[bin]]
name = "test_device"
path = "test_device.rs"

[[bin]]
name = "send_packet"
path = "send_packet.rs"

[[bin]]
name = "dictionary_array_test"
path = "dictionary_array_test.rs"

[[bin]]
name = "bandwidth_test"
path = "bandwidth_test.rs"